--- a/測試/demo-new.ipynb
+++ b/測試/demo-new.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "為什麼這個老是報錯? 即便從別的可以正常執行的複製過來還是報錯?\n",
+    "\n",
+    "結果是因為 \n",
+    "\n",
+    "gemini = ChatGoogleGenerativeAI(model = \"gemini-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),\n",
+    "\n",
+    "# 最後面多了一個\",\"造成的，切記！！！！！！！"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,34 +25,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# You can choose to use a local model through Ollama for example. See ./docs/how-to/llm-connections.md for more information.\n",
-    "from langchain_community.llms import Ollama\n",
+    "# from langchain_community.llms import Ollama\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "# from langchain_google_genai import ChatGoogleGenerativeAI\n",
-    "ollama = Ollama(model=\"openhermes\")\n",
-    "# gemini = ChatGoogleGenerativeAI(model = \"gemini-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),\n",
-    "# gemini = ChatGoogleGenerativeAI(model = \"gemini-1.0-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),"
+    "# ollama = Ollama(model=\"openhermes\")\n",
+    "# gemini = ChatGoogleGenerativeAI(model = \"gemini-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"])\n",
+    "gemini = ChatGoogleGenerativeAI(model=\"gemini-pro\",\n",
+    "                             verbose = True,\n",
+    "                             temperature = 0.6,\n",
+    "                             # google_api_key = os.environ[\"GOOGLE_API_KEY\"]\n",
+    "                             )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install duckduckgo-search for this example:\n",
     "# !pip install -U duckduckgo-search\n",
     "\n",
-    "from langchain_community.tools import DuckDuckGoSearchRun\n",
+    "# from langchain_community.tools import DuckDuckGoSearchRun  # 不確定跟下面哪個是新用法?\n",
+    "from langchain.tools import DuckDuckGoSearchRun\n",
     "search_tool = DuckDuckGoSearchRun()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +68,8 @@
     "  goal='Uncover cutting-edge developments in AI and data science',\n",
     "  backstory=\"\"\"You work at a leading tech think tank.\n",
     "  Your expertise lies in identifying emerging trends.\n",
-    "  You have a knack for dissecting complex data and presenting actionable insights.\"\"\",\n",
+    "  You have a knack for dissecting complex data and presenting \n",
+    "  actionable insights.\"\"\",\n",
     "  verbose=True,\n",
     "  allow_delegation=False,\n",
     "  tools=[search_tool],\n",
@@ -61,7 +81,7 @@
     "  # Examples:\n",
     "  #\n",
     "  # from langchain_community.llms import Ollama\n",
-    "  llm=ollama # was defined above in the file\n",
+    "  llm=gemini # was defined above in the file\n",
     "  #\n",
     "  # from langchain_openai import ChatOpenAI\n",
     "  # llm=ChatOpenAI(model_name=\"gpt-3.5\", temperature=0.7)\n",
@@ -74,14 +94,14 @@
     "  verbose=True,\n",
     "  allow_delegation=True,\n",
     "  debug_mode=True,\n",
-    "  llm=ollama\n",
+    "  llm=gemini\n",
     "  # (optional) llm=ollama_llm\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +118,24 @@
     "  post that highlights the most significant AI advancements.\n",
     "  Your post should be informative yet accessible, catering to a tech-savvy audience.\n",
     "  Make it sound cool, avoid complex words so it doesn't sound like AI.\n",
-    "  Your final answer MUST be the full blog post of at least 4 paragraphs.\"\"\",\n",
+    "  Your final answer MUST be the full blog post of at least 5 paragraphs using taditional chinese writing.\"\"\",\n",
     "  agent=writer\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Overriding of current TracerProvider is not allowed\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate your crew with a sequential process\n",
     "crew = Crew(\n",
@@ -119,18 +147,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m在目前儲存格或上一個儲存格中執行程式碼時，Kernel 已損毀。\n",
-      "\u001b[1;31m請檢閱儲存格中的程式碼，找出失敗的可能原因。\n",
-      "\u001b[1;31m如需詳細資訊，請按一下<a href='https://aka.ms/vscodeJupyterKernelCrash'>這裡</a>。\n",
-      "\u001b[1;31m如需詳細資料，請檢視 Jupyter <a href='command:jupyter.viewOutput'>記錄</a>。"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG]: Working Agent: Senior Research Analyst\n",
+      "[INFO]: Starting Task: Conduct a comprehensive analysis of the latest advancements in AI in 2024.\n",
+      "  Identify key trends, breakthrough technologies, and potential industry impacts.\n",
+      "  Your final answer MUST be a full analysis report\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mThought: Do I need to use a tool? Yes\n",
+      "Action: duckduckgo_search\n",
+      "Action Input: What are the latest advancements in AI in 2024?\u001b[0mTool duckduckgo_search has been used.\n",
+      "\u001b[93m \n",
+      "\n",
+      "Features By Ryan Morrison published 27 December 2023 While 2023 was the year of AI, 2024 will be the year we use it. Comments (0) (Image credit: Aston Martin/Apple) We have just come to the end... In 2024, generative AI might actually become useful for the regular, non-tech person, and we are going to see more people tinkering with a million little AI models. State-of-the-art AI... As 2024 unfolds, we will see monumental leaps in AI capabilities, especially in areas demanding complex problem-solving fueled by quantum advancements. 4. Here are some important current AI trends to look out for in the coming year. Reality check: more realistic expectations. Multimodal AI. Small (er) language models and open source advancements. GPU shortages and cloud costs. Model optimization is getting more accessible. Customized local models and data pipelines. More powerful virtual agents. Here are the top 10 AI and machine learning trends to prepare for in 2024. 1. Multimodal AI. Multimodal AI goes beyond traditional single-mode data processing to encompass multiple input types, such as text, images and sound -- a step toward mimicking the human ability to process diverse sensory information.\n",
+      "\u001b[00m\n",
+      "\u001b[32;1m\u001b[1;3m.\u001b[0mInvalid Format: Missing 'Action:' after 'Thought:\u001b[32;1m\u001b[1;3mDo I need to use a tool? No\n",
+      "Final Answer: **Latest Advancements in AI in 2024**\n",
+      "\n",
+      "**Key Trends**\n",
+      "\n",
+      "* **Multimodal AI:** AI systems that can process and generate different types of data, such as text, images, and sound. This enables more natural and intuitive interactions between humans and AI.\n",
+      "* **Generative AI:** AI systems that can create new data, such as text, images, and music. This technology has the potential to revolutionize creative industries and enable new forms of human expression.\n",
+      "* **Quantum AI:** AI systems that use quantum computing to solve complex problems that are intractable for classical computers. This technology has the potential to accelerate scientific discovery and lead to new breakthroughs in fields such as materials science and drug development.\n",
+      "\n",
+      "**Breakthrough Technologies**\n",
+      "\n",
+      "* **Large Language Models (LLMs):** These are AI models that have been trained on massive datasets of text and can perform a wide range of language-related tasks, such as text generation, translation, and question answering.\n",
+      "* **Diffusion Models:** These are AI models that can generate realistic images and other types of data by gradually refining a random starting point.\n",
+      "* **Reinforcement Learning (RL):** This is a type of AI that learns by trial and error, enabling it to solve complex problems without explicit instructions.\n",
+      "\n",
+      "**Potential Industry Impacts**\n",
+      "\n",
+      "* **Healthcare:** AI is being used to develop new drugs, diagnose diseases, and personalize treatments.\n",
+      "* **Finance:** AI is being used to automate tasks, detect fraud, and make investment decisions.\n",
+      "* **Manufacturing:** AI is being used to optimize production processes, improve quality control, and predict demand.\n",
+      "* **Transportation:** AI is being used to develop self-driving cars, optimize traffic flow, and improve safety.\n",
+      "* **Retail:** AI is being used to personalize shopping experiences, optimize inventory management, and detect fraud.\n",
+      "\n",
+      "**Conclusion**\n",
+      "\n",
+      "AI is rapidly advancing and has the potential to transform many aspects of our lives. By staying abreast of the latest trends and breakthrough technologies, we can ensure that we are well-positioned to harness the power of AI for good.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "[DEBUG]: [Senior Research Analyst] Task output: **Latest Advancements in AI in 2024**\n",
+      "\n",
+      "**Key Trends**\n",
+      "\n",
+      "* **Multimodal AI:** AI systems that can process and generate different types of data, such as text, images, and sound. This enables more natural and intuitive interactions between humans and AI.\n",
+      "* **Generative AI:** AI systems that can create new data, such as text, images, and music. This technology has the potential to revolutionize creative industries and enable new forms of human expression.\n",
+      "* **Quantum AI:** AI systems that use quantum computing to solve complex problems that are intractable for classical computers. This technology has the potential to accelerate scientific discovery and lead to new breakthroughs in fields such as materials science and drug development.\n",
+      "\n",
+      "**Breakthrough Technologies**\n",
+      "\n",
+      "* **Large Language Models (LLMs):** These are AI models that have been trained on massive datasets of text and can perform a wide range of language-related tasks, such as text generation, translation, and question answering.\n",
+      "* **Diffusion Models:** These are AI models that can generate realistic images and other types of data by gradually refining a random starting point.\n",
+      "* **Reinforcement Learning (RL):** This is a type of AI that learns by trial and error, enabling it to solve complex problems without explicit instructions.\n",
+      "\n",
+      "**Potential Industry Impacts**\n",
+      "\n",
+      "* **Healthcare:** AI is being used to develop new drugs, diagnose diseases, and personalize treatments.\n",
+      "* **Finance:** AI is being used to automate tasks, detect fraud, and make investment decisions.\n",
+      "* **Manufacturing:** AI is being used to optimize production processes, improve quality control, and predict demand.\n",
+      "* **Transportation:** AI is being used to develop self-driving cars, optimize traffic flow, and improve safety.\n",
+      "* **Retail:** AI is being used to personalize shopping experiences, optimize inventory management, and detect fraud.\n",
+      "\n",
+      "**Conclusion**\n",
+      "\n",
+      "AI is rapidly advancing and has the potential to transform many aspects of our lives. By staying abreast of the latest trends and breakthrough technologies, we can ensure that we are well-positioned to harness the power of AI for good.\n",
+      "\n",
+      "\n",
+      "[DEBUG]: Working Agent: Tech Content Strategist\n",
+      "[INFO]: Starting Task: Using the insights provided, develop an engaging blog\n",
+      "  post that highlights the most significant AI advancements.\n",
+      "  Your post should be informative yet accessible, catering to a tech-savvy audience.\n",
+      "  Make it sound cool, avoid complex words so it doesn't sound like AI.\n",
+      "  Your final answer MUST be the full blog post of at least 5 paragraphs using taditional chinese writing.\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mThought: Do I need to use a tool? No\n",
+      "Final Answer: **人工智能的最新進展**\n",
+      "\n",
+      "人工智能（AI）正在快速發展，並有可能改變我們生活的許多方面。通過了解最新的趨勢和突破性技術，我們可以確保我們處於有利地位，可以善用人工智能的力量。\n",
+      "\n",
+      "**關鍵趨勢**\n",
+      "\n",
+      "* **多模態 AI：**可以處理和生成不同類型數據（例如文本、圖像和聲音）的 AI 系統。這使得人類和 AI 之間的互動更加自然和直觀。\n",
+      "* **生成式 AI：**可以創建新數據（例如文本、圖像和音樂）的 AI 系統。這項技術有可能徹底改變創意產業，並開啟人類表達的新形式。\n",
+      "* **量子 AI：**使用量子計算來解決傳統計算機無法解決的複雜問題的 AI 系統。這項技術有可能加速科學發現，並在材料科學和藥物開發等領域帶來新的突破。\n",
+      "\n",
+      "**突破性技術**\n",
+      "\n",
+      "* **大型語言模型（LLM）：**這些是經過大量文本數據集訓練的 AI 模型，並且可以執行廣泛的與語言相關的任務，例如文本生成、翻譯和問題解答。\n",
+      "* **擴散模型：**這些是 AI 模型，可以通過逐漸優化隨機起點來生成逼真的圖像和其他類型數據。\n",
+      "* **強化學習（RL）：**這是一種通過試錯學習的 AI，使它能夠在沒有明確指示的情況下解決複雜的問題。\n",
+      "\n",
+      "**潛在的產業影響**\n",
+      "\n",
+      "* **醫療保健：**AI 被用於開發新藥、診斷疾病和個性化治療。\n",
+      "* **金融：**AI 被用於自動化任務、檢測欺詐和做出投資決策。\n",
+      "* **製造：**AI 被用於優化生產流程、提高質量控制和預測需求。\n",
+      "* **交通運輸：**AI 被用於開發自動駕駛汽車、優化交通流量和提高安全性。\n",
+      "* **零售：**AI 被用於個性化購物體驗、優化庫存管理和檢測欺詐。\n",
+      "\n",
+      "**結論**\n",
+      "\n",
+      "AI 正在快速發展，並有可能改變我們生活的許多方面。通過了解最新的趨勢和突破性技術，我們可以確保我們處於有利地位，可以善用人工智能的力量。\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "[DEBUG]: [Tech Content Strategist] Task output: **人工智能的最新進展**\n",
+      "\n",
+      "人工智能（AI）正在快速發展，並有可能改變我們生活的許多方面。通過了解最新的趨勢和突破性技術，我們可以確保我們處於有利地位，可以善用人工智能的力量。\n",
+      "\n",
+      "**關鍵趨勢**\n",
+      "\n",
+      "* **多模態 AI：**可以處理和生成不同類型數據（例如文本、圖像和聲音）的 AI 系統。這使得人類和 AI 之間的互動更加自然和直觀。\n",
+      "* **生成式 AI：**可以創建新數據（例如文本、圖像和音樂）的 AI 系統。這項技術有可能徹底改變創意產業，並開啟人類表達的新形式。\n",
+      "* **量子 AI：**使用量子計算來解決傳統計算機無法解決的複雜問題的 AI 系統。這項技術有可能加速科學發現，並在材料科學和藥物開發等領域帶來新的突破。\n",
+      "\n",
+      "**突破性技術**\n",
+      "\n",
+      "* **大型語言模型（LLM）：**這些是經過大量文本數據集訓練的 AI 模型，並且可以執行廣泛的與語言相關的任務，例如文本生成、翻譯和問題解答。\n",
+      "* **擴散模型：**這些是 AI 模型，可以通過逐漸優化隨機起點來生成逼真的圖像和其他類型數據。\n",
+      "* **強化學習（RL）：**這是一種通過試錯學習的 AI，使它能夠在沒有明確指示的情況下解決複雜的問題。\n",
+      "\n",
+      "**潛在的產業影響**\n",
+      "\n",
+      "* **醫療保健：**AI 被用於開發新藥、診斷疾病和個性化治療。\n",
+      "* **金融：**AI 被用於自動化任務、檢測欺詐和做出投資決策。\n",
+      "* **製造：**AI 被用於優化生產流程、提高質量控制和預測需求。\n",
+      "* **交通運輸：**AI 被用於開發自動駕駛汽車、優化交通流量和提高安全性。\n",
+      "* **零售：**AI 被用於個性化購物體驗、優化庫存管理和檢測欺詐。\n",
+      "\n",
+      "**結論**\n",
+      "\n",
+      "AI 正在快速發展，並有可能改變我們生活的許多方面。通過了解最新的趨勢和突破性技術，我們可以確保我們處於有利地位，可以善用人工智能的力量。\n",
+      "\n",
+      "\n",
+      "######################\n",
+      "**人工智能的最新進展**\n",
+      "\n",
+      "人工智能（AI）正在快速發展，並有可能改變我們生活的許多方面。通過了解最新的趨勢和突破性技術，我們可以確保我們處於有利地位，可以善用人工智能的力量。\n",
+      "\n",
+      "**關鍵趨勢**\n",
+      "\n",
+      "* **多模態 AI：**可以處理和生成不同類型數據（例如文本、圖像和聲音）的 AI 系統。這使得人類和 AI 之間的互動更加自然和直觀。\n",
+      "* **生成式 AI：**可以創建新數據（例如文本、圖像和音樂）的 AI 系統。這項技術有可能徹底改變創意產業，並開啟人類表達的新形式。\n",
+      "* **量子 AI：**使用量子計算來解決傳統計算機無法解決的複雜問題的 AI 系統。這項技術有可能加速科學發現，並在材料科學和藥物開發等領域帶來新的突破。\n",
+      "\n",
+      "**突破性技術**\n",
+      "\n",
+      "* **大型語言模型（LLM）：**這些是經過大量文本數據集訓練的 AI 模型，並且可以執行廣泛的與語言相關的任務，例如文本生成、翻譯和問題解答。\n",
+      "* **擴散模型：**這些是 AI 模型，可以通過逐漸優化隨機起點來生成逼真的圖像和其他類型數據。\n",
+      "* **強化學習（RL）：**這是一種通過試錯學習的 AI，使它能夠在沒有明確指示的情況下解決複雜的問題。\n",
+      "\n",
+      "**潛在的產業影響**\n",
+      "\n",
+      "* **醫療保健：**AI 被用於開發新藥、診斷疾病和個性化治療。\n",
+      "* **金融：**AI 被用於自動化任務、檢測欺詐和做出投資決策。\n",
+      "* **製造：**AI 被用於優化生產流程、提高質量控制和預測需求。\n",
+      "* **交通運輸：**AI 被用於開發自動駕駛汽車、優化交通流量和提高安全性。\n",
+      "* **零售：**AI 被用於個性化購物體驗、優化庫存管理和檢測欺詐。\n",
+      "\n",
+      "**結論**\n",
+      "\n",
+      "AI 正在快速發展，並有可能改變我們生活的許多方面。通過了解最新的趨勢和突破性技術，我們可以確保我們處於有利地位，可以善用人工智能的力量。\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\curl_cffi\\aio.py:192: UserWarning: Curlm alread closed! quitting from process_data\n",
+      "  warnings.warn(\"Curlm alread closed! quitting from process_data\")\n"
      ]
     }
    ],
@@ -159,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
