--- a/測試/demo.ipynb
+++ b/測試/demo.ipynb
@@ -4,11 +4,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from crewai import Agent, Task, Crew, Process\n",
-    "# from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "from langchain_community.llms import OpenAI, Ollama\n",
     "from langchain_openai import ChatOpenAI"
    ]
@@ -49,8 +58,7 @@
     "gpt35 = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.7),\n",
     "gpt4 = ChatOpenAI(model_name=\"gpt-4\", temperature=0.7),\n",
     "ollama = Ollama(model=\"mistral\") \n",
-    "# gemini = ChatGoogleGenerativeAI(model = \"gemini-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),\n",
-    "# gemini = ChatGoogleGenerativeAI(model = \"gemini-1.0-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),"
+    "gemini = ChatGoogleGenerativeAI(model = \"gemini-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"])"
    ]
   },
   {
@@ -63,22 +71,15 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: duckduckgo-search in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (4.4.3)\n",
-      "Requirement already satisfied: nest-asyncio>=1.6.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (1.6.0)\n",
       "Requirement already satisfied: click>=8.1.7 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (8.1.7)\n",
       "Requirement already satisfied: curl-cffi>=0.6.0b9 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (0.6.0b9)\n",
       "Requirement already satisfied: lxml>=5.1.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (5.1.0)\n",
+      "Requirement already satisfied: nest-asyncio>=1.6.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (1.6.0)\n",
       "Requirement already satisfied: colorama in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from click>=8.1.7->duckduckgo-search) (0.4.6)\n",
       "Requirement already satisfied: cffi>=1.12.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from curl-cffi>=0.6.0b9->duckduckgo-search) (1.16.0)\n",
       "Requirement already satisfied: certifi in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from curl-cffi>=0.6.0b9->duckduckgo-search) (2024.2.2)\n",
       "Requirement already satisfied: pycparser in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from cffi>=1.12.0->curl-cffi>=0.6.0b9->duckduckgo-search) (2.21)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: There was an error checking the latest version of pip.\n"
      ]
     }
    ],
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
     "  actionable insights.\"\"\",\n",
     "  verbose=True,\n",
     "  allow_delegation=False,\n",
-    "  llm = ollama,\n",
+    "  llm = gemini,\n",
     "  tools=[search_tool]\n",
     "   # You can pass an optional llm attribute specifying what mode you wanna use.\n",
     "  # It can be a local model through Ollama / LM Studio or a remote\n",
@@ -121,7 +122,7 @@
     "  backstory=\"\"\"You are a renowned Content Strategist, known for\n",
     "  your insightful and engaging articles.\n",
     "  You transform complex concepts into compelling narratives. 你專長以繁體中文寫作文章\"\"\",\n",
-    "  llm = ollama,\n",
+    "  llm = gemini,\n",
     "  # verbose=True,\n",
     "  # allow_delegation=True,\n",
     "  # (optional) llm=ollama_llm\n",
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,31 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[DEBUG]: Working Agent: Senior Research Analyst\n",
-      "[INFO]: Starting Task: Conduct a comprehensive analysis of the latest advancements in AI in 2024.\n",
-      "  Identify key trends, breakthrough technologies, and potential industry impacts.\n",
-      "  Your final answer MUST be a full analysis report\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m在目前儲存格或上一個儲存格中執行程式碼時，Kernel 已損毀。\n",
-      "\u001b[1;31m請檢閱儲存格中的程式碼，找出失敗的可能原因。\n",
-      "\u001b[1;31m如需詳細資訊，請按一下<a href='https://aka.ms/vscodeJupyterKernelCrash'>這裡</a>。\n",
-      "\u001b[1;31m如需詳細資料，請檢視 Jupyter <a href='command:jupyter.viewOutput'>記錄</a>。"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get your crew to work! kickoff(開球)開始工作~\n",
     "result = crew.kickoff()\n",
@@ -213,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
