--- a/測試/CrewAI-Tutorial.ipynb
+++ b/測試/CrewAI-Tutorial.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "crewai 捨棄要錢的 openAI，改使用免費的 Ollama 或 gemini pro\n",
     "\n",
-    "Ollama 現階段還是不夠強，建議採用 gemini pro\n"
+    "Ollama 現階段還是不夠強，建議採用 gemini pro\n",
+    "\n",
+    "crewai 必須在建立 agent、task 時就把角色、任務設定好，才能執行，\n",
+    "\n",
+    "phidata 則可以透過 cli 交互命令行來交付任務，比較有彈性。\n"
    ]
   },
   {
