--- a/測試/CrewAI-Tutorial.ipynb
+++ b/測試/CrewAI-Tutorial.ipynb
@@ -28,18 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\curl_cffi\\aio.py:192: UserWarning: Curlm alread closed! quitting from process_data\n",
-      "  warnings.warn(\"Curlm alread closed! quitting from process_data\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 匯入依賴庫\n",
     "import os\n",
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +51,11 @@
     "# 與 autogen 不同，autogen 要調用 Ollama 需要執行 litellm，多一道步驟，比較麻煩\n",
     "gpt35 = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.7),\n",
     "gpt4 = ChatOpenAI(model_name=\"gpt-4\", temperature=0.7),\n",
+    "# Ollama 大模型，可以看要用哪一個\n",
     "ollama = Ollama(model=\"openhermes_assistant\")  # 這是用 modelfile 建立的\n",
+    "ollama_openhermes = Ollama(model=\"openhermes\")\n",
+    "ollama_solar = Ollama(model=\"Solar\")\n",
+    "\n",
     "gemini = ChatGoogleGenerativeAI(model=\"gemini-pro\",\n",
     "                             verbose = True,\n",
     "                             temperature = 0.6,\n",
@@ -70,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,15 +128,16 @@
     "  # model like OpenAI, Mistral, Antrophic of others (https://python.langchain.com/docs/integrations/llms/)\n",
     "  #\n",
     "  # Examples:\n",
-    "  llm=ollama # was defined above in the file\n",
+    "  # llm=ollama # was defined above in the file\n",
     "  # llm=ChatOpenAI(model_name=\"gpt-3.5\", temperature=0.7)\n",
     "  # llm = gemini  #using google gemini pro API\n",
+    "  # 或在定義後，使用 researcher.llm = ollama 或 gemini 來更改模型\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,13 +150,24 @@
     "  verbose=True,\n",
     "  allow_delegation=False,\n",
     "  tools=[],\n",
-    "  llm = gemini  #using google gemini pro API\n",
+    "  # llm = gemini  #using google gemini pro API\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 上面可以先不指定用哪一個 llm，這裡再指定就可以\n",
+    "researcher.llm = gemini\n",
+    "writer.llm = ollama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,146 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[DEBUG]: Working Agent: Senior Research Analyst\n",
-      "[INFO]: Starting Task: Conduct a comprehensive analysis of the latest advancements in AI in 2024.\n",
-      "  Identify key trends, breakthrough technologies, and potential industry impacts.\n",
-      "  Your final answer MUST be a full analysis report\n",
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought: Do I need to use a tool? Yes\n",
-      "Action: duckduckgo_search\n",
-      "Action Input: \"latest advancements in AI in 2024\"\u001b[0m\u001b[93m \n",
-      "\n",
-      "In 2024, generative AI might actually become useful for the regular, non-tech person, and we are going to see more people tinkering with a million little AI models. State-of-the-art AI... Changes In Funding Gen AI And Other Technology In 2024 Feb 16, 2024,08:30am EST B2B Leaders, Here's How To Capitalize On Experience-Led Growth Feb 16, 2024,02:04am EST The Role Of... The most important AI trends in 2024 Artificial intelligence Business transformation February 9, 2024 By Dave Bergmann 12 min read 10 top AI and machine learning trends for 2024 10 top artificial intelligence certifications and courses for 2024 The future of AI: What to expect in the next 5 years The multimodal capabilities in OpenAI's GPT-4 model enable the software to respond to visual and audio input. AI in 2024 — the biggest new products and advancements on the way Features By Ryan Morrison published 27 December 2023 While 2023 was the year of AI, 2024 will be the year we use it....\n",
-      "\u001b[00m\n",
-      "\u001b[32;1m\u001b[1;3mDo I need to use a tool? Yes\n",
-      "Action: duckduckgo_search\n",
-      "Action Input: \"key trends in AI in 2024\"\u001b[0m"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\curl_cffi\\aio.py:192: UserWarning: Curlm alread closed! quitting from process_data\n",
-      "  warnings.warn(\"Curlm alread closed! quitting from process_data\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[93m \n",
-      "\n",
-      "Most Popular AI Uses in 2024 Sources Show more Top AI Statistics Discover the most impactful artificial intelligence statistics that highlight the growth and influence of artificial... The 5 Biggest Artificial Intelligence Trends For 2024 More From Forbes Feb 16, 2024,09:44am EST Changes In Funding Gen AI And Other Technology In 2024 Feb 16, 2024,08:30am EST B2B... Five Key Trends in AI and Data Science for 2024 These developing issues should be on every leader's radar screen, data executives say. Thomas H. Davenport and Randy Bean January 09, 2024 Reading Time: 7 min Carolyn Geason-Beissel/MIT SMR | Getty Images Artificial intelligence and data science became front-page news in 2023. Here are the top 10 AI and machine learning trends to prepare for in 2024. 1. Multimodal AI Multimodal AI goes beyond traditional single-mode data processing to encompass multiple input types, such as text, images and sound -- a step toward mimicking the human ability to process diverse sensory information. The most important AI trends in 2024 Artificial intelligence Business transformation February 9, 2024 By Dave Bergmann 12 min read\n",
-      "\u001b[00m\n",
-      "\u001b[32;1m\u001b[1;3mDo I need to use a tool? Yes\n",
-      "Action: duckduckgo_search\n",
-      "Action Input: \"breakthrough technologies in AI in 2024\"\u001b[0m"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\curl_cffi\\aio.py:192: UserWarning: Curlm alread closed! quitting from process_data\n",
-      "  warnings.warn(\"Curlm alread closed! quitting from process_data\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[93m \n",
-      "\n",
-      "Artificial intelligence AI for everything: 10 Breakthrough Technologies 2024 Generative AI tools like ChatGPT reached mass adoption in record time, and reset the course of an entire... In 2024, generative AI might actually become useful for the regular, non-tech person, and we are going to see more people tinkering with a million little AI models. State-of-the-art AI... Dec 27, 2023,09:00am EST Share to Facebook Share to Twitter Share to Linkedin In 2024, we will mark a new era of technological innovation with AI. What will make the biggest impact? There are... 10 Breakthrough Technologies Every year, the reporters and editors at MIT Technology Review survey the tech landscape and pick 10 technologies that we think have the greatest potential to... Google, Microsoft, and OpenAI will continue to lead the Generative AI charge but they'll be joined by newcomers like Samsung with its Galaxy AI, Amazon with its more powerful Alexa, and...\n",
-      "\u001b[00m\n",
-      "\u001b[32;1m\u001b[1;3mDo I need to use a tool? Yes\n",
-      "Action: duckduckgo_search\n",
-      "Action Input: \"key trends in AI in 2024\"\u001b[0m\u001b[93m \n",
-      "\n",
-      "Most Popular AI Uses in 2024 Sources Show more Top AI Statistics Discover the most impactful artificial intelligence statistics that highlight the growth and influence of artificial... The 5 Biggest Artificial Intelligence Trends For 2024 More From Forbes Feb 16, 2024,09:44am EST Changes In Funding Gen AI And Other Technology In 2024 Feb 16, 2024,08:30am EST B2B... Five Key Trends in AI and Data Science for 2024 These developing issues should be on every leader's radar screen, data executives say. Thomas H. Davenport and Randy Bean January 09, 2024 Reading Time: 7 min Carolyn Geason-Beissel/MIT SMR | Getty Images Artificial intelligence and data science became front-page news in 2023. Here are the top 10 AI and machine learning trends to prepare for in 2024. 1. Multimodal AI Multimodal AI goes beyond traditional single-mode data processing to encompass multiple input types, such as text, images and sound -- a step toward mimicking the human ability to process diverse sensory information. The most important AI trends in 2024 Artificial intelligence Business transformation February 9, 2024 By Dave Bergmann 12 min read\n",
-      "\u001b[00m\n",
-      "\u001b[32;1m\u001b[1;3mDo I need to use a tool? No\n",
-      "Final Answer: Some of the key trends in AI in 2024 include multimodal AI, increased use of generative AI, advancements in explainable AI, growth of AI-powered decision making, and greater adoption of AI by small and medium-sized businesses.\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n",
-      "[DEBUG]: [Senior Research Analyst] Task output: Some of the key trends in AI in 2024 include multimodal AI, increased use of generative AI, advancements in explainable AI, growth of AI-powered decision making, and greater adoption of AI by small and medium-sized businesses.\n",
-      "\n",
-      "\n",
-      "[DEBUG]: Working Agent: Tech Content Strategist\n",
-      "[INFO]: Starting Task: Using the insights provided, develop an engaging blog\n",
-      "  post that highlights the most significant AI advancements.\n",
-      "  Your post should be informative yet accessible, catering to a tech-savvy audience.\n",
-      "  Make it sound cool, avoid complex words so it doesn't sound like AI.\n",
-      "  Your final answer MUST be the full blog post of at least 5 paragraphs using taditional chinese writing.\n",
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m```\n",
-      "Do I need to use a tool? Yes\n",
-      "Action: Google Translate\n",
-      "Action Input: Translate the following text into traditional chinese:\n",
-      "**标题：2024 年人工智能的五大发展**\n",
-      "\n",
-      "人工智能（AI）正在以前所未有的速度发展，2024 年有望成为人工智能领域具有里程碑意义的一年。以下是我们预计将在未来一年看到的五项最重要的 AI 发展：\n",
-      "\n",
-      "1. **多模态人工智能：**多模态人工智能模型能够处理不同类型的数据，例如文本、图像和语音。这使得它们能够执行各种任务，从回答问题到生成创意内容。\n",
-      "2. **生成式人工智能的兴起：**生成式人工智能模型能够生成新的数据，例如文本、图像和音乐。这在创意产业和科学研究等领域具有巨大的潜力。\n",
-      "3. **可解释人工智能的进步：**可解释人工智能模型能够解释其决策过程。这对于建立对人工智能的信​​任和确保其公平使用至关重要。\n",
-      "4. **人工智能决策的增长：**人工智能模型正越来越多地用于做出决策，从推荐产品到预测疾病。这可以提高决策的效率和质量。\n",
-      "5. **中小企业对人工智能的更多采用：**人工智能技术正变得越来越容易获得，这使得中小企业能够利用人工智能来提高其运营效率。\n",
-      "\n",
-      "**这些发展表明，人工智能在 2024 年及以后仍将继续对我们的生活和工作产生深远影响。随着人工智能技术的不断进步，我们预计在未来几个月和几年的时间里会出现更多令人惊叹的应用。**\n",
-      "```\u001b[0mGoogle Translate is not a valid tool, try one of [].\u001b[32;1m\u001b[1;3mDo I need to use a tool? No\n",
-      "Final Answer: **2024 年人工智能的五大发展**\n",
-      "\n",
-      "人工智能（AI）正在以前所未有的速度发展，2024 年有望成为人工智能领域具有里程碑意义的一年。以下是我们预计将在未来一年看到的五项最重要的 AI 发展：\n",
-      "\n",
-      "1. **多模态人工智能：**多模态人工智能模型能够处理不同类型的数据，例如文本、图像和语音。这使得它们能够执行各种任务，从回答问题到生成创意内容。\n",
-      "2. **生成式人工智能的兴起：**生成式人工智能模型能够生成新的数据，例如文本、图像和音乐。这在创意产业和科学研究等领域具有巨大的潜力。\n",
-      "3. **可解释人工智能的进步：**可解释人工智能模型能够解释其决策过程。这对于建立对人工智能的信​​任和确保其公平使用至关重要。\n",
-      "4. **人工智能决策的增长：**人工智能模型正越来越多地用于做出决策，从推荐产品到预测疾病。这可以提高决策的效率和质量。\n",
-      "5. **中小企业对人工智能的更多采用：**人工智能技术正变得越来越容易获得，这使得中小企业能够利用人工智能来提高其运营效率。\n",
-      "\n",
-      "**这些发展表明，人工智能在 2024 年及以后仍将继续对我们的生活和工作产生深远影响。随着人工智能技术的不断进步，我们预计在未来几个月和几年的时间里会出现更多令人惊叹的应用。**\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n",
-      "[DEBUG]: [Tech Content Strategist] Task output: **2024 年人工智能的五大发展**\n",
-      "\n",
-      "人工智能（AI）正在以前所未有的速度发展，2024 年有望成为人工智能领域具有里程碑意义的一年。以下是我们预计将在未来一年看到的五项最重要的 AI 发展：\n",
-      "\n",
-      "1. **多模态人工智能：**多模态人工智能模型能够处理不同类型的数据，例如文本、图像和语音。这使得它们能够执行各种任务，从回答问题到生成创意内容。\n",
-      "2. **生成式人工智能的兴起：**生成式人工智能模型能够生成新的数据，例如文本、图像和音乐。这在创意产业和科学研究等领域具有巨大的潜力。\n",
-      "3. **可解释人工智能的进步：**可解释人工智能模型能够解释其决策过程。这对于建立对人工智能的信​​任和确保其公平使用至关重要。\n",
-      "4. **人工智能决策的增长：**人工智能模型正越来越多地用于做出决策，从推荐产品到预测疾病。这可以提高决策的效率和质量。\n",
-      "5. **中小企业对人工智能的更多采用：**人工智能技术正变得越来越容易获得，这使得中小企业能够利用人工智能来提高其运营效率。\n",
-      "\n",
-      "**这些发展表明，人工智能在 2024 年及以后仍将继续对我们的生活和工作产生深远影响。随着人工智能技术的不断进步，我们预计在未来几个月和几年的时间里会出现更多令人惊叹的应用。**\n",
-      "\n",
-      "\n",
-      "**2024 年人工智能的五大发展**\n",
-      "\n",
-      "人工智能（AI）正在以前所未有的速度发展，2024 年有望成为人工智能领域具有里程碑意义的一年。以下是我们预计将在未来一年看到的五项最重要的 AI 发展：\n",
-      "\n",
-      "1. **多模态人工智能：**多模态人工智能模型能够处理不同类型的数据，例如文本、图像和语音。这使得它们能够执行各种任务，从回答问题到生成创意内容。\n",
-      "2. **生成式人工智能的兴起：**生成式人工智能模型能够生成新的数据，例如文本、图像和音乐。这在创意产业和科学研究等领域具有巨大的潜力。\n",
-      "3. **可解释人工智能的进步：**可解释人工智能模型能够解释其决策过程。这对于建立对人工智能的信​​任和确保其公平使用至关重要。\n",
-      "4. **人工智能决策的增长：**人工智能模型正越来越多地用于做出决策，从推荐产品到预测疾病。这可以提高决策的效率和质量。\n",
-      "5. **中小企业对人工智能的更多采用：**人工智能技术正变得越来越容易获得，这使得中小企业能够利用人工智能来提高其运营效率。\n",
-      "\n",
-      "**这些发展表明，人工智能在 2024 年及以后仍将继续对我们的生活和工作产生深远影响。随着人工智能技术的不断进步，我们预计在未来几个月和几年的时间里会出现更多令人惊叹的应用。**\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# crew\n",
     "# Get your crew to work!\n",
